feat:调整首页样式

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,6 +45,15 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
 			</p>
 		</main>
-		<Footer />
+		<!-- <Footer /> -->
 	</body>
 </html>
+<style>
+	main{
+		background-color: bisque;
+		height: calc(100vh - 50px);
+		overflow-y: auto;
+		width: 100vw;
+		padding: 20px;
+	}
+</style>
