--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,25 +1,27 @@
 ---
 import HeaderLink from './HeaderLink.astro';
-import { SITE_TITLE } from '../consts';
 ---
 
 <header>
-	<h2>
-		{SITE_TITLE}
-	</h2>
-	<nav>
+
+	<nav class="w-full">
 		<HeaderLink href="/">Home</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
 		<HeaderLink href="/about">About</HeaderLink>
-		<HeaderLink href="https://twitter.com/astrodotbuild" target="_blank">Twitter</HeaderLink>
-		<HeaderLink href="https://github.com/withastro/astro" target="_blank">GitHub</HeaderLink>
+
 	</nav>
 </header>
 <style>
 	header {
-		margin: 0em 0 2em;
+		/* margin: 0em 0 2em; */
 	}
 	h2 {
 		margin: 0.5em 0;
+	}
+	nav{
+		background-image: linear-gradient(90deg, #ff8a00 0%, #e52e71 100%);
+		height: 50px;
+		line-height: 50px;
+		text-align: center;
 	}
 </style>
