--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,11 +1,11 @@
 ---
-import type { CollectionEntry } from 'astro:content';
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
+import type { CollectionEntry } from "astro:content";
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import FormattedDate from "../components/FormattedDate.astro";
 
-type Props = CollectionEntry<'blog'>['data'];
+type Props = CollectionEntry<"blog">["data"];
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
@@ -30,22 +30,63 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 
 	<body>
 		<Header />
-		<main>
+		<main style={{ backgroundImage: `url(${heroImage})` }}>
+			<div >
+				<div
+					class="h-64 relative"
+					
+				>
+					<div
+						class="w-full absolute bottom-0 text-white text-center liner-gradient"
+					>
+						<h1 class="title text-white">{title}</h1>
+						<FormattedDate date={pubDate} />
+						{
+							updatedDate && (
+								<div class="last-updated-on">
+									Last updated on{" "}
+									<FormattedDate date={updatedDate} />
+								</div>
+							)
+						}
+					</div>
+				</div>
+			</div>
 			<article>
-				{heroImage && <img width={720} height={360} src={heroImage} alt="" />}
-				<h1 class="title">{title}</h1>
-				<FormattedDate date={pubDate} />
-				{
-					updatedDate && (
-						<div class="last-updated-on">
-							Last updated on <FormattedDate date={updatedDate} />
-						</div>
-					)
-				}
-				<hr />
 				<slot />
 			</article>
 		</main>
 		<Footer />
+		<style>
+			.liner-gradient {
+				padding-top: 60px;
+				padding-bottom: 30px;
+				background: linear-gradient(
+					180deg,
+					rgba(204, 204, 204, 0) 0%,
+					rgba(204, 204, 204, 0.1) 20%,
+					rgba(204, 204, 204, 0.2) 40%,
+					rgba(204, 204, 204, 0.3) 60%,
+					rgba(204, 204, 204, 0.3) 90%,
+					rgba(204, 204, 204, 0.3) 100%
+				);
+			}
+			main{
+				background-color: bisque;
+			}
+			article {
+				margin: auto;
+				width: 60%;
+				position: relative;
+				box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+
+				margin-top: -20px;
+				margin-bottom: -20px;
+				z-index: 2;
+				padding: 20px;
+				border-radius: 4px;
+				background: #fff;
+			}
+		</style>
 	</body>
 </html>
