feat: 更新markdown样式，导航栏动效

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,7 +4,7 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import FormattedDate from "../components/FormattedDate.astro";
-
+// import "../../themes/themes/enhanced/notion-darker-enhanced.css"
 type Props = CollectionEntry<"blog">["data"];
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
@@ -52,11 +52,12 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 					</div>
 				</div>
 			</div>
-			<article>
+			<article class="prose  md:prose-lg lg:prose-xl max-w-none">
 				<slot />
 			</article>
 		</main>
 		<Footer />
+		<style ></style>
 		<style>
 			.liner-gradient {
 				padding-top: 60px;
@@ -73,17 +74,19 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 			}
 			main{
 				background-color: bisque;
+				background-attachment:fixed ;
 			}
 			article {
 				margin: auto;
 				width: 60%;
+				min-height: 800px;
 				position: relative;
 				box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
 
 				margin-top: -20px;
 				margin-bottom: -20px;
 				z-index: 2;
-				padding: 20px;
+				padding: 30px;
 				border-radius: 4px;
 				background: #fff;
 			}
