--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,29 @@
 ---
-import HeaderLink from './HeaderLink.astro';
+import HeaderLink from "./HeaderLink.astro";
 ---
 
-<header>
+<script>
+	const navBar = document.querySelector(".nav-bar");
+	let prevScrollPos = window.pageYOffset;
 
-	<nav class="w-full">
+	window.addEventListener("scroll", () => {
+		const currentScrollPos = window.pageYOffset;
+
+		if (prevScrollPos > currentScrollPos) {
+			navBar!.classList.remove("hidden-nav");
+		} else {
+			navBar!.classList.add("hidden-nav");
+		}
+
+		prevScrollPos = currentScrollPos;
+	});
+</script>
+
+<header>
+	<nav class="w-full nav-bar">
 		<HeaderLink href="/">Home</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
 		<HeaderLink href="/about">About</HeaderLink>
-
 	</nav>
 </header>
 <style>
@@ -18,10 +33,21 @@ import HeaderLink from './HeaderLink.astro';
 	h2 {
 		margin: 0.5em 0;
 	}
-	nav{
+	nav {
 		background-image: linear-gradient(90deg, #ff8a00 0%, #e52e71 100%);
 		height: 50px;
 		line-height: 50px;
 		text-align: center;
+	}
+	.nav-bar {
+		position: fixed;
+		top: 0;
+		z-index: 3;
+		font-size: 1.2rem;
+		transition: all 0.3s ease-in-out;
+	}
+
+	.hidden-nav {
+		transform: translateY(-100%);
 	}
 </style>
