--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,7 +21,6 @@ import HeaderLink from "./HeaderLink.astro";
 
 <header>
 	<nav class="w-full nav-bar">
-		1
 		<HeaderLink href="/">Home</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
 		<HeaderLink href="/about">About</HeaderLink>
@@ -40,7 +39,7 @@ import HeaderLink from "./HeaderLink.astro";
 		position: fixed;
 		display: flex;
 		justify-content: center;
-		width: 80px;
+		width: 100%;
 		top: 0;
 		z-index: 3;
 		font-size: 1.2rem;
