--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -31,11 +31,8 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 	<body>
 		<Header />
 		<main style={{ backgroundImage: `url(${heroImage})` }}>
-			<div >
-				<div
-					class="h-64 relative"
-					
-				>
+			<div>
+				<div class="h-64 relative">
 					<div
 						class="w-full absolute bottom-0 text-white text-center liner-gradient"
 					>
@@ -52,12 +49,12 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 					</div>
 				</div>
 			</div>
-			<article class="prose  md:prose-lg lg:prose-xl max-w-none">
+			<article class="prose md:prose-lg lg:prose-xl max-w-none responsive-article">
 				<slot />
 			</article>
 		</main>
 		<Footer />
-		<style ></style>
+		<style></style>
 		<style>
 			.liner-gradient {
 				padding-top: 60px;
@@ -72,16 +69,15 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 					rgba(204, 204, 204, 0.3) 100%
 				);
 			}
-			main{
+			main {
 				background-color: bisque;
-				background-attachment:fixed ;
+				background-attachment: fixed;
 			}
 			article {
 				margin: auto;
-				width: 60%;
 				min-height: 800px;
 				position: relative;
-				box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+				box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 
 				margin-top: -20px;
 				margin-bottom: -20px;
