--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,14 +21,15 @@ import HeaderLink from "./HeaderLink.astro";
 
 <header>
 	<nav class="w-full responsive-nav">
-		<HeaderLink href="/">Home</HeaderLink>
-		<HeaderLink href="/blog">Blog</HeaderLink>
-		<HeaderLink href="/about">About</HeaderLink>
+		<HeaderLink href="/">首页</HeaderLink>
+		<HeaderLink href="/blog">博客</HeaderLink>
+		<HeaderLink href="/about">关于</HeaderLink>
 	</nav>
 </header>
 <style>
 	nav {
-		background-image: linear-gradient(90deg, #ff8a00 0%, #e52e71 100%);
+		/* background-image: linear-gradient(90deg, #ff8a00 0%, #e52e71 100%); */
+		background-color:white;
 		height: 50px;
 		line-height: 50px;
 		text-align: left;
@@ -38,6 +39,9 @@ import HeaderLink from "./HeaderLink.astro";
 		top: 0;
 		z-index: 3;
 		transition: all 0.3s ease-in-out;
+	}
+	header{
+		height: 50px;
 	}
 
 	.hidden-nav {
