--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -15,6 +15,8 @@ const isActive = href === pathname || href === pathname.replace(/\/$/, '');
 <style>
 	a {
 		display: inline-block;
+		width: 80px;
+		text-align: center;
 		text-decoration: none;
 	}
 	a.active {
