--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,13 +6,37 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../../consts";
 import { getCollection } from "astro:content";
 import FormattedDate from "../../components/FormattedDate.astro";
 
+// const posts = (await getCollection("blog")).sort(
+// 	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+// );
+
 const posts = (await getCollection("blog")).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
+// 创建用于存储归类后文章的 Map 对象
+const postsByMonth = new Map();
+
+// 迭代排序后的文章列表
+for (const post of posts) {
+	// 获取文章发布日期的年份和月份
+	const year = post.data.pubDate.getFullYear();
+	const month = post.data.pubDate.getMonth() + 1; // 注意月份从 0 开始计数，需要加 1
+
+	// 以“yyyy-mm”的格式创建键值
+	const key = `${year}-${month < 10 ? "0" : ""}${month}`;
+
+	// 如果该键值不存在，则创建一个新的数组
+	if (!postsByMonth.has(key)) {
+		postsByMonth.set(key, []);
+	}
+
+	// 将当前文章添加到相应的数组中
+	postsByMonth.get(key).push(post);
+}
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 		<style>
@@ -20,32 +44,37 @@ const posts = (await getCollection("blog")).sort(
 				list-style-type: none;
 				padding: unset;
 			}
-			ul li {
-				display: flex;
-			}
+
 			ul li :global(time) {
-				flex: 0 0 130px;
+				/* flex: 0 0 130px; */
 				font-style: italic;
 				color: #595959;
 			}
-			ul li a:visited {
+			ul  a:visited {
 				color: #8e32dc;
 			}
 		</style>
 	</head>
 	<body>
 		<Header />
-		<main>
+		<main class="responsive-article">
 			<section>
-				<ul>
+				<ul class="responsive-list">
 					{
-						posts.map((post) => (
-							<li>
-								<FormattedDate date={post.data.pubDate} />
-								<a href={`/blog/${post.slug}/`}>
-									{post.data.title}
-								</a>
-							</li>
+						[...postsByMonth.keys()].map((key) => (
+							<ul class="sub-ul">
+								<span>{key}</span>
+								{postsByMonth.get(key).map((post, index) => (
+									<a href={`/blog/${post.slug}/`}>
+										<li class="responsive-item">
+											{post.data.title}
+											<FormattedDate
+												date={post.data.pubDate}
+											/>
+										</li>
+									</a>
+								))}
+							</ul>
 						))
 					}
 				</ul>
@@ -54,18 +83,24 @@ const posts = (await getCollection("blog")).sort(
 		<!-- <Footer /> -->
 		<style>
 			main {
-				width: 60%;
-				min-width: 400px;
 				margin: auto;
-				padding: 20px;
+			}
+			li {
+				border-bottom: 1px solid;
+				line-height: 2.5;
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				/* flex-direction: column; */
+			}
+			ul.sub-ul  a:hover {
+				color: #777;
+			}
+			.sub-ul {
+				/* border: 1px solid; */
+				padding: var(--content-padding);
 			}
 			/* 应用于屏幕宽度小于等于320像素的设备（如小型手机） */
-
-
-			li {
-				height: 40px;
-				font-size: 20px;
-			}
 		</style>
 	</body>
 </html>
