--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -72,6 +72,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 			main {
 				background-color: bisque;
 				background-attachment: fixed;
+				backgroung-size: 100% auto;
 			}
 			article {
 				margin: auto;
