--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -49,12 +49,49 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 					</div>
 				</div>
 			</div>
-			<article class="prose md:prose-lg lg:prose-xl max-w-none responsive-article">
+			<article
+				class="prose md:prose-lg lg:prose-xl max-w-none responsive-article"
+			>
 				<slot />
 			</article>
 		</main>
 		<Footer />
-		<style></style>
+		<script>
+			let copyButtonLabel = "复制";
+			let codeBlocks = Array.from(document.querySelectorAll("pre"));
+
+			for (let codeBlock of codeBlocks) {
+				let wrapper = document.createElement("div");
+				wrapper.style.position = "relative";
+
+				let copyButton = document.createElement("button");
+				copyButton.className = "copy-code";
+				copyButton.innerHTML = copyButtonLabel;
+
+				codeBlock.setAttribute("tabindex", "0");
+				codeBlock.appendChild(copyButton);
+				// wrap codebock with relative parent element
+				codeBlock.parentNode!.insertBefore(wrapper, codeBlock);
+				wrapper.appendChild(codeBlock);
+				copyButton.addEventListener("click", async () => {
+					await copyCode(codeBlock, copyButton);
+				});
+			}
+
+			async function copyCode(block, button) {
+				let code = block.querySelector("code");
+				let text = code.innerText;
+
+				await navigator.clipboard.writeText(text);
+
+				// visual feedback that task is completed
+				button.innerText = "复制完成";
+
+				setTimeout(() => {
+					button.innerText = copyButtonLabel;
+				}, 700);
+			}
+		</script>
 		<style>
 			.liner-gradient {
 				padding-top: 60px;
@@ -92,6 +129,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 					width: calc(100vw - 20px);
 				}
 			}
+			
 		</style>
 	</body>
 </html>
