--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -75,6 +75,20 @@ blockquote {
 	margin: 0px;
 	font-style: italic;
 }
+// 代码复制
+.copy-code {
+	position: absolute;
+	top: 0;
+	right: 0;
+	background-color: #3730a3;
+	padding: 0.25rem 0.5rem;
+	font-size: 0.75rem;
+	line-height: 1rem;
+}
+
+.copy-code:hover {
+	background-color: #312e81;
+}
 
 /* 隐藏滚动条 */
 body::-webkit-scrollbar {
